# serverless-cache

./: .gitignore  Cargo.toml  Makefile  README.md  example.drawio  normal.drawio  serverless-cache.drawio
deployment/: api-to-sqs-integration.yml  api.yml  cloudfront.yml  dynamodb.yml  origin-api.yml
src/: error.rs  lib.rs
src/dtos/: batch_item_failures.rs  mod.rs  origin_response.rs  set_cache_request.rs  warmup_request.rs
src/models/: cache.rs
src/queries/: add_cache.rs  get_cache.rs  mod.rs
src/utils/: api_helper.rs
